@@ -1,10 +1,14 @@
 package io.cucumber.cucumberexpressions;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 
 import java.lang.reflect.Type;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+
+import static java.util.Objects.requireNonNull;
 
 @API(status = API.Status.STABLE)
 public final class Argument<T> {
@@ -12,12 +16,15 @@ public final class Argument<T> {
     private final Group group;
 
     static List<Argument<?>> build(Group group, List<ParameterType<?>> parameterTypes) {
-        List<Group> argGroups = group.getChildren();
+        List<Group> argGroups = group.getChildren().orElseGet(Collections::emptyList);
 
         if (argGroups.size() != parameterTypes.size()) {
             // This requires regex injection through a Cucumber expression.
             // Regex injection should be be possible any more.
-            throw new IllegalArgumentException(String.format("Group has %s capture groups, but there were %s parameter types", argGroups.size(), parameterTypes.size()));
+            throw new IllegalArgumentException("Group has %d capture groups, but there were %d parameter types".formatted(
+                    argGroups.size(), 
+                    parameterTypes.size()
+            ));
         }
         List<Argument<?>> args = new ArrayList<>(argGroups.size());
         for (int i = 0; i < parameterTypes.size(); i++) {
@@ -30,15 +37,15 @@ public final class Argument<T> {
     }
 
     private Argument(Group group, ParameterType<T> parameterType) {
-        this.group = group;
-        this.parameterType = parameterType;
+        this.group = requireNonNull(group);
+        this.parameterType = requireNonNull(parameterType);
     }
 
     public Group getGroup() {
         return group;
     }
 
-    public T getValue() {
+    public @Nullable T getValue() {
         return parameterType.transform(group.getValues());
     }
 
